<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jan.praca.Settings">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/general"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        />
    <TextView
        android:onClick="onClickedChangeLanguage"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/changeLang_TextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:text="@string/changeLang"
        android:textColor="#000000"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:onClick="onClickedQuality"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/quality"
        android:textColor="#000000"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:onClick="onClickedLogOut"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/logout"
        android:textColor="#000000"/>



    <TextView
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        />
    <android.support.v7.widget.SwitchCompat
        android:layout_marginRight="10dp"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/dailyNotificatio"
        android:id="@+id/dailyReminder_Switch"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setTimeTextView"
            android:onClick="onClickedSetTime"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/setTime"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/showTime_TextView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"

            android:paddingRight="20dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <android.support.v7.widget.SwitchCompat
        android:textSize="18sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/sound"
        android:id="@+id/soundReminder_Switch"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <android.support.v7.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:layout_height="50dp"
        android:text="@string/vibra"
        android:id="@+id/vibraReminder_Switch"
        />

    <TextView
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_settings"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        />
    <TextView
        android:onClick="onClickedChangeVideoOutputFormat"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/changeVideoFormat_TextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:text="Format"
        android:textColor="#000000"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/withSoundVideo_Switch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/sound"
            android:textSize="18sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:onClick="onClickedAudioChange"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/setSound_TextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:text="Audio"
        android:textColor="#000000"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>


        <TextView
            android:onClick="onChangeFrameRate"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/fps"
            android:textColor="#000000"
            android:textSize="18sp" />


    </LinearLayout>


</ScrollView>
